fixed overflow bugs in card component

--- a/src/components/userCard/UserCard.css
+++ b/src/components/userCard/UserCard.css
@@ -106,7 +106,8 @@
 	background-color: #f7f5ec;
 }
 
-.team-content .name {
+.team-content .name,
+.team-content .title {
 	/* max-width: 172.02px; */
 	overflow: hidden;
 }
